gcc/testsuite/gcc.dg/noncompile/init-4.c
struct a { char *b; } c[D] /* { dg-error "undeclared" } */
  = { { "" } } ;  /* { dg-warning "braces around scalar initializer|near" } */
